midpoint settings, added midpointVersion